--- a/ML-OpenCV.vcxproj.filters
+++ b/ML-OpenCV.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="dataStructure.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="cv_objDetect.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Linear_Algebra.h">
@@ -72,6 +75,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="DemoML.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="cv_objDetect.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
