--- a/ML-OpenCV.vcxproj
+++ b/ML-OpenCV.vcxproj
@@ -76,6 +76,10 @@
     <LibraryPath>C:\Users\Acer\Documents\opencv\build\x64\vc14\bin;C:\Users\Acer\Documents\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
     <IncludePath>C:\Users\Acer\Documents\opencv\build\include;C:\Users\Acer\Documents\opencv\build\include\opencv;C:\Users\Acer\Documents\opencv\build\include\opencv2;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LibraryPath>C:\Users\Acer\Documents\opencv\build\x64\vc14\lib;C:\Users\Acer\Documents\opencv\build\x64\vc14\bin;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Acer\Documents\opencv\build\include\opencv2;C:\Users\Acer\Documents\opencv\build\include\opencv;C:\Users\Acer\Documents\opencv\build\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -97,7 +101,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\Users\Acer\Documents\opencv\build\x64\vc14\bin;C:\Users\Acer\Documents\opencv\build\x64\vc14\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world330.lib;opencv_world330d.lib;opencv_features2d330.lib;opencv_features2d330d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world330.lib;opencv_world330d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -124,6 +128,8 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>C:\Users\Acer\Documents\opencv\build\x64\vc14\bin;C:\Users\Acer\Documents\opencv\build\x64\vc14\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world330.lib;opencv_world330d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
